--- a/src/main/resources/templates/partials/footer.html
+++ b/src/main/resources/templates/partials/footer.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Footer Partial</title>
 </head>
 <body>
-$END$
+<footer th:fragment="footer">
+  This is your footer!
+</footer>
+
 </body>
 </html>
