--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Navbar Partial</title>
 </head>
 <body>
-$END$
+<nav th:fragment="navbar">
+    <h6>This is your navbar!</h6>
+</nav>
+
 </body>
 </html>
