created posts view

--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>All Posts</title>
 </head>
+<nav th:replace= "partials/navbar :: navbar" />
 <body>
-$END$
+
+
+
+<h2>All Posts</h2>
+<div th:each="post : ${posts}">
+    <h1 th:text="${post.title}"></h1>
+    <p th:text="${post.body}"></p>
+</div>
+
 </body>
+<footer th:replace= "partials/footer :: footer" />
 </html>
