--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Create a post</title>
 </head>
 <body>
-$END$
+
+<h1>Create Post</h1>
+
+<form th:action="@{'/posts/create'}" th:method="POST">
+    <div>
+        <label for="title">Title</label>
+        <input type="text" name="title" id="title" th:value="${post.title}">
+    </div>
+
+    <div>
+        <label for="body">Body</label>
+        <textarea name="body" id="body" th:value="${post.body}"></textarea>
+    </div>
+
+    <button>Update Post</button>
+</form>
+
+
+
 </body>
 </html>
