--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Post Edit Form</title>
@@ -9,7 +9,7 @@
 
 <h1>Edit Post</h1>
 
-<form th:action="@{'/posts/' +${post.id}+ '/edit'}" th:method="POST">
+<form th:action="@{'/posts/' + ${post.id} + '/edit'}" th:method="POST">
     <div>
         <label for="title">Title</label>
         <input type="text" name="title" id="title" th:value="${post.title}">
@@ -17,7 +17,7 @@
 
     <div>
         <label for="body">Body</label>
-        <textarea name="body" id="body" th:value="${post.body}"></textarea>
+        <textarea name="body" id="body" th:text="${post.body}"></textarea>
     </div>
 
     <button>Update Post</button>
