--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -8,20 +8,37 @@
 
 <h1>Create Post</h1>
 
-<form th:action="@{'/posts/create'}" th:method="POST">
-    <div>
+<!--<form th:action="@{'/posts/create'}" th:method="POST">-->
+<!--    <div>-->
+<!--        <label for="title">Title</label>-->
+<!--        <input type="text" name="title" id="title" th:value="${post.title}">-->
+<!--    </div>-->
+
+<!--    <div>-->
+<!--        <label for="body">Body</label>-->
+<!--        <textarea name="body" id="body" th:value="${post.body}"></textarea>-->
+<!--    </div>-->
+
+<!--    <button>Update Post</button>-->
+<!--</form>-->
+
+
+<!--reference the ad controller and the object in the get mapping-->
+<form th:action="@{'/posts/create'}" method="post" th:object="${post}">
+    <div class="form-group">
         <label for="title">Title</label>
-        <input type="text" name="title" id="title" th:value="${post.title}">
+        <!--        the th:field attribute replaces the name attribute and correlates with the object in the getMapping and will be sent to the postMapping.  -->
+        <input type="text" class="form-control" id="title" th:field="*{title}">
     </div>
-
-    <div>
+    <div class="form-group">
         <label for="body">Body</label>
-        <textarea name="body" id="body" th:value="${post.body}"></textarea>
+        <textarea class="form-control" id="body" th:field="*{body}"></textarea>
     </div>
-
-    <button>Update Post</button>
+    <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
+</body>
+</html>
 
 
 </body>
