--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <meta charset="UTF-8">
     <title>Create a post</title>
 </head>
+
+<nav th:replace= "partials/navbar :: navbar" />
 <body>
 
 <h1>Create Post</h1>
